<resources>
    <string name="app_name" translatable="false">PCompiler</string>
    <string name="error_occurred">An unexpected error occurred. Please send the error report</string>
    <string name="error_crashed">App crashed!</string>
    <string name="button_clear">Clear</string>
    <string name="button_save">Save</string>
    <string name="app_lang_changed">App language has been changed. Please restart the application</string>
    <string name="activity_settings">@string/menu_settings</string>
    <string name="button_uni">All packages</string>
    <string name="menu_fullview">Full view</string>
    <string name="menu_savepatch">Save patch</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_regexp">Regular expressions</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_flags">Flags</string>
    <string name="menu_clear">@string/button_clear</string>
    <string name="menu_web">Link</string>
    <string name="menu_context_smali" translatable="false">smali*/*.smali</string>
    <string name="menu_context_xml" translatable="false">res/*.xml</string>
    <string name="menu_context_androidmanifest" translatable="false">AndroidManifest.xml</string>
    <string name="menu_context_application" translatable="false">[APPLICATION]</string>
    <string name="menu_context_launcher_activities" translatable="false">[ACTIVITIES]</string>
    <string name="menu_context_activities" translatable="false">[LAUNCHER_ACTIVITIES]</string>
    <string name="title_fullview">Patch viewer</string>
    <string name="title_save">Save</string>
    <string name="title_filename">File name</string>
    <string name="title_zip_filename">Zip file name</string>
    <string name="title_list_of_rules">List of rules</string>
    <string name="title_regexp_flags">Regexp flags</string>
    <string name="hint_comment">Comment</string>
    <string name="hint_author">Author</string>
    <string name="hint_package">Package name</string>
    <string name="hint_name">Name</string>
    <string name="hint_target">Target resource</string>
    <string name="hint_find">Find</string>
    <string name="hint_replace">Replace</string>
    <string name="hint_next_rule">Next rule</string>
    <string name="hint_vars">Variables</string>
    <string name="hint_source">Source</string>
    <string name="root_f" translatable="false">ROOT\nFOLDER</string>
    <string name="regex" translatable="false">REGEX</string>
    <string name="hint_regexp">RegExp</string>
    <string name="hint_text">Text</string>
    <string name="hint_min_engine_ver">Min engine version</string>
    <string name="hint_description">Patch description, which has been displayed before patching</string>
    <string name="pref_interface">Interface</string>
    <string name="pref_interface_theme">App theme</string>
    <string name="pref_interface_arta">Arta syntax highlighting</string>
    <string name="pref_system_language">System</string>
    <string name="pref_sys_lang">Language</string>
    <string name="pref_interaction">Interaction</string>
    <string name="pref_interaction_open">Main tab</string>
    <string name="pref_interaction_open_symmary">Changes the main app tab. Needs app restart</string>
    <string name="pref_interaction_back">Twice back button press</string>
    <string name="pref_presets">Presets</string>
    <string name="pref_presets_engine">Default min engine version</string>
    <string name="pref_presets_author">Default author</string>
    <string name="pref_presets_path">Patch output folder</string>
    <string name="pref_presets_archive_comment">Archive comment</string>
    <string name="pref_presets_mime_type">MIME Type</string>
    <string name="pref_tweaks">Tweaks</string>
    <string name="pref_tweaks_escape_find">EscapeFind</string>
    <string name="pref_tweaks_escape_find_summary">Escape all line breaks, dots, brackets, and more…</string>
    <string name="pref_tweaks_force_regexp">ForceRegexp</string>
    <string name="pref_tweaks_force_regexp_summary">Force enable regexp support</string>
    <string name="message_patch_cleared">Patch configuration cleared</string>
    <string name="message_press_back">Press back once more</string>
    <string name="message_copied_to_clipboard">Copied to clipboard</string>
    <string name="message_saved_in_path" formatted="false">Saved in: %s%s</string>
    <string name="message_saved_in_path_zip" formatted="false">Saved in: %s</string>
    <string name="message_patch_cannot_empty">Error: Patch cannot be empty!</string>
    <string name="message_file_overwrite">Create file…</string>
    <string name="message_saved">Saved</string>
    <string name="message_name_reserved">This name is reversed. Please enter another one</string>
    <string name="tab_about" translatable="false">about</string>
    <string name="tab_match_replace" translatable="false">match replace</string>
    <string name="tab_match_goto" translatable="false">match goto</string>
    <string name="tab_match_assign" translatable="false">match assign</string>
    <string name="tab_goto" translatable="false">goto</string>
    <string name="tab_add_files" translatable="false">add files</string>
    <string name="tab_remove_files" translatable="false">remove files</string>
    <string name="tab_merge" translatable="false">merge</string>
    <string name="tab_dummy" translatable="false">dummy</string>
    <string name="tab_help">Quick help</string>
    <string name="tab_regex">Regexp tester</string>
    <string name="tab_documentation">Documentation</string>
    <string name="about_version">Version: %s</string>
    <string name="about_time">Build date: %s</string>
    <string name="copyright_c" translatable="false">Copyright © 2017 Snow Volf (Artem Zhiganov).</string>
    <string name="authors">Author and developer: Snow Volf (Artem Zhiganov)\nMain contributor: htc 600</string>
    <string name="regex_def_match">0 matches</string>
    <string name="regex_def_match_one">%d match</string>
    <string name="regex_def_match_few">%d matches</string>
    <string name="title_list_of_files">File list (%d)</string>
    <string name="title_list_of_dex">Dex list (%d)</string>
    <string name="title_activity_about">@string/menu_about</string>
    <string name="match_tags">Match tags</string>
    <string name="tags">Tags</string>
    <string name="other">Other</string>
</resources>