<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_interface">
        <ListPreference
            android:defaultValue="0"
            android:key="ui.theme"
            android:title="@string/pref_interface_theme"
            android:entries="@array/theme_names"
            android:entryValues="@array/theme_values"/>
        <SwitchPreference
            android:key="ui.arta"
            android:title="@string/pref_interface_arta"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_system_language">
        <ListPreference
            android:key="sys.language"
            android:title="@string/pref_sys_lang"
            android:entries="@array/entries_lang"
            android:entryValues="@array/values_lang"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_interaction">
        <ListPreference
            android:defaultValue="1"
            android:key="tab.sort"
            android:title="@string/pref_interaction_open"
            android:summary="@string/pref_interaction_open_symmary"
            android:entries="@array/tab_names"
            android:entryValues="@array/tab_values"/>
        <SwitchPreference
            android:key="interaction.back"
            android:title="@string/pref_interaction_back"
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_presets">
        <Preference
            android:key="preset.engine_ver"
            android:title="@string/pref_presets_engine"/>
        <Preference
            android:key="preset.author"
            android:title="@string/pref_presets_author"/>
        <Preference
            android:key="preset.path"
            android:title="@string/pref_presets_path"/>
        <Preference
            android:key="preset.archive_comment"
            android:title="@string/pref_presets_archive_comment"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_tweaks">
    <SwitchPreference
        android:key="other.escape_find"
        android:title="@string/pref_tweaks_escape_find"
        android:summary="@string/pref_tweaks_escape_find_summary"
        android:defaultValue="false"/>
    <SwitchPreference
        android:key="other.regexp"
        android:title="@string/pref_tweaks_force_regexp"
        android:summary="@string/pref_tweaks_force_regexp_summary"
        android:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>