<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_view"
        android:title="@string/menu_fullview"
        android:icon="@drawable/ic_full_view"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_save"
        android:title="@string/menu_savepatch"
        android:icon="@drawable/ic_save"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_reset"
        android:title="@string/menu_reset"
        android:icon="@drawable/ic_reset"/>
    <item
        android:id="@+id/action_regex_help"
        android:title="@string/menu_regexp"
        android:icon="@drawable/ic_regexp"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        android:icon="@drawable/ic_info"/>
</menu>