<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

            <ru.svolf.girl.ui.GirlEditText
                android:hint="@string/hint_comment"
                android:id="@+id/field_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ru.svolf.girl.ui.GirlEditText
                android:hint="@string/hint_name"
                android:id="@+id/field_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <ru.svolf.girl.ui.GirlEditText
                    android:id="@+id/field_target"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/variants"
                    android:hint="@string/hint_target"/>


            <ImageButton
                android:id="@+id/variants"
                style="@style/Base.Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_expand_more" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <ru.svolf.girl.ui.GirlEditText
                    android:id="@+id/field_find"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/checkBoxContainer"
                    android:hint="@string/hint_find"/>


            <LinearLayout
                android:id="@+id/checkBoxContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkbox_regex"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"/>

                <TextView
                    android:includeFontPadding="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/regex"
                    android:textColor="?colorAccent"
                    android:textSize="10sp" />
            </LinearLayout>
        </RelativeLayout>

            <ru.svolf.girl.ui.GirlEditText
                android:id="@+id/field_assign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_vars"/>

        <include
            android:id="@+id/button_bar"
            layout="@layout/button_bar" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>