<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">
<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint_comment">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/field_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_target"
            android:layout_toStartOf="@+id/variants">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/field_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
        <ImageButton
            android:id="@+id/variants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_expand_more"
            android:background="?selectableItemBackgroundBorderless"
            style="@style/Base.Widget.AppCompat.Button.Small"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_find"
        android:layout_toStartOf="@+id/checkBoxContainer">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/field_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_marginStart="4dp"
            android:orientation="vertical"
            android:id="@+id/checkBoxContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">
            <CheckBox
                android:id="@+id/checkbox_regex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regex"
                android:textSize="10sp"
                android:layout_gravity="center_horizontal"
                android:textColor="?colorAccent"/>
        </LinearLayout>
    </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_next_rule">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/field_next_rule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <include layout="@layout/button_bar"/>
</LinearLayout>
</android.support.v4.widget.NestedScrollView>