<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_comment">
        <ru.svolf.girl.ui.GirlEditText
            android:id="@+id/field_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name">
        <ru.svolf.girl.ui.GirlEditText
            android:id="@+id/field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_target"
            android:layout_toStartOf="@+id/variants">
            <ru.svolf.girl.ui.GirlEditText
                android:id="@+id/field_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <ImageButton
            android:id="@+id/variants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_expand_more"
            android:background="?selectableItemBackgroundBorderless"
            style="@style/Base.Widget.AppCompat.Button.Small"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_find"
            android:layout_toStartOf="@+id/checkBoxContainer">
            <ru.svolf.girl.ui.GirlEditText
                android:id="@+id/field_find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/checkBoxContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">
            <CheckBox
                android:id="@id/checkbox_regex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regex"
                android:textSize="10sp"
                android:layout_gravity="center_horizontal"
                android:textColor="?colorAccent"/>
        </LinearLayout>
    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_replace">
        <ru.svolf.girl.ui.GirlEditText
            android:id="@+id/field_replace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <include
        android:id="@+id/button_bar"
        layout="@layout/button_bar"/>
</LinearLayout>
</androidx.core.widget.NestedScrollView>